--- a/src/app/components/new-chat/new-chat.component.html
+++ b/src/app/components/new-chat/new-chat.component.html
@@ -1,5 +1,5 @@
-<div
-      class="min-h-screen bg-gray-100 flex flex-col justify-center py-12 sm:px-6 lg:px-8"
+<!-- <div
+      class="new-chat-container"
     >
       <div class="sm:mx-auto sm:w-full sm:max-w-md">
         <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
@@ -49,4 +49,37 @@
           </form>
         </div>
       </div>
+    </div> -->
+
+<div class="new-chat-container">
+  <div class="new-chat-header">
+    <h2>Start a New Chat</h2>
+  </div>
+
+  <div class="new-chat-form-container">
+    <div class="new-chat-form-box">
+      @if (errorMessage()) {
+        <div class="error-message" role="alert">
+          <span>{{ errorMessage() }}</span>
+        </div>
+      }
+
+      <form (ngSubmit)="onSubmit()" class="new-chat-form">
+        <div class="form-group">
+          <label for="email">Participant's Email</label>
+          <input
+            id="email"
+            name="email"
+            type="email"
+            required
+            [(ngModel)]="participantEmail"
+          />
+        </div>
+
+        <div class="form-group">
+          <button type="submit">Start Chat</button>
+        </div>
+      </form>
     </div>
+  </div>
+</div>
