--- a/src/app/components/chat-room/chat-room.component.html
+++ b/src/app/components/chat-room/chat-room.component.html
@@ -1,9 +1,9 @@
 <div class="chat-room-container">
   <h2>Chat Room</h2>
 
-  <div class="messages">
+  <div class="messages" #chatContainer>
     <div *ngFor="let msg of messages()" class="message" [ngClass]="{ 'own-message': msg.senderId === userId }">
-      <strong>{{ msg.senderEmail }}:</strong> {{ msg.message }}
+      <strong>{{ msg.senderName ? msg.senderName : msg.senderEmail }}:</strong> {{ msg.message }}
     </div>
   </div>
 
