--- a/src/app/components/new-chat/new-chat.component.html
+++ b/src/app/components/new-chat/new-chat.component.html
@@ -77,8 +77,10 @@
         </div>
 
         <div class="form-group">
-          <button type="submit">Start Chat</button>
+          <button type="submit" (click)="close()">Start Chat</button>
         </div>
+        <button (click)="close()">Close</button>
+
       </form>
     </div>
   </div>
