--- a/src/app/components/new-chat/new-chat.component.scss
+++ b/src/app/components/new-chat/new-chat.component.scss
@@ -1,10 +1,21 @@
 .new-chat-container {
-  min-height: 100vh;
-  background-color: #f3f4f6;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 3rem 1.5rem;
+  // min-height: 100vh;
+  // background-color: #f3f4f6;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // padding: 3rem 1.5rem;
+  position: fixed;
+  height: 673px;
+  width: 315px;
+  top: 25px;
+  left: 116px;
+  z-index: 1000;
+  background: white;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  padding: 16px;
+  border-radius: 12px;
+  
 }
 
 .new-chat-header {
