--- a/src/app/components/chat-list/chat-list.component.html
+++ b/src/app/components/chat-list/chat-list.component.html
@@ -3,7 +3,7 @@
         <div class="px-4 py-6 sm:px-0">
           <div class="flex justify-between items-center mb-6">
             <h1 class="text-3xl font-bold text-gray-900">Chats</h1>
-            <button (click)="openNewChatPopup()">Start New Chat</button>
+            <button (click)="openNewChatPopup()" class="btn btn-dark">Start New Chat</button>
           </div>
 
           <div class="bg-white shadow overflow-hidden sm:rounded-md">
