--- a/src/app/components/new-chat/new-chat.component.html
+++ b/src/app/components/new-chat/new-chat.component.html
@@ -79,7 +79,7 @@
         <div class="form-group">
           <button type="submit" (click)="close()">Start Chat</button>
         </div>
-        <button (click)="close()">Close</button>
+        <button (click)="close()" class="btn btn-danger" >Close</button>
 
       </form>
     </div>
