--- a/src/app/components/chat-layout/chat-layout.component.html
+++ b/src/app/components/chat-layout/chat-layout.component.html
@@ -4,7 +4,7 @@
         <div class="chat-list-container w-25">
             <app-chat-list></app-chat-list>
         </div>
-        <div class="chat-container w-75">
+        <div class="w-75">
             <router-outlet></router-outlet>
         </div>
     </div>
