--- a/src/app/components/chat-list/chat-list.component.html
+++ b/src/app/components/chat-list/chat-list.component.html
@@ -11,7 +11,7 @@
               @for (chat of chatStore.chats(); track chat.id) {
               <li>
                 <a
-                  [routerLink]="['/chat', chat.id]"
+                  [routerLink]="['/home/chat']" [queryParams]="{id: chat.id}"
                   class="block hover:bg-gray-50"
                 >
                   <div class="px-4 py-4 sm:px-6">
