redirect to login

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<h1>Hello from this Chat App</h1>
+<h2 class="header">Chat App</h2>
 
-<a routerLink="/signup">Create Account</a>
+<app-login/>
 
 
 
