--- a/src/app/components/chat-room/chat-room.component.scss
+++ b/src/app/components/chat-room/chat-room.component.scss
@@ -1,13 +1,13 @@
 .chat-room-container {
   max-width: 900px;
-  margin: 2rem auto;
+  margin: .2rem auto;
   padding: 2rem;
   background-color: #ffffff;
   border-radius: 1.5rem;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.07);
   display: flex;
   flex-direction: column;
-  height: 85vh;
+  height: 90.5vh;
 
   h2 {
     text-align: center;
