--- a/src/app/components/chat-list/chat-list.component.html
+++ b/src/app/components/chat-list/chat-list.component.html
@@ -5,7 +5,7 @@
       <!-- Sticky Header -->
       <div class="chat-header">
         <h1 class="chat-title">Chats</h1>
-        <button (click)="openNewChatPopup()" class="start-chat-btn">Start New Chat</button>
+        <button (click)="openNewChatPopup()" class="start-chat-btn"> <b>Start New Chat </b> </button>
       </div>
 
       <!-- Scrollable Chat List -->
@@ -37,7 +37,7 @@
 
       <!-- Sticky Logout Button -->
       <div class="logout-container">
-        <button (click)="logout()" class="logout-btn">Logout</button>
+        <button (click)="logout()" class="logout-btn"> <b> Logout </b> </button>
       </div>
 
     </div>
