--- a/src/app/components/chat-list/chat-list.component.scss
+++ b/src/app/components/chat-list/chat-list.component.scss
@@ -30,18 +30,19 @@
 }
 
 .chat-title {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #222;
-  margin: 0;
+  text-align: center;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+    color: #1f2937;
 }
 
 .start-chat-btn {
   display: block;
   width: 100%;
   padding: 0.5rem 1rem;
-  background-color: #333;
-  color: #fff;
+  background-color: #29b429;
+  color: #ffffff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -49,7 +50,7 @@
 }
 
 .start-chat-btn:hover {
-  background-color: #000;
+  background-color: #43912c;
 }
 
 .chat-list-container {
