--- a/src/app/components/chat-list/chat-list.component.scss
+++ b/src/app/components/chat-list/chat-list.component.scss
@@ -95,7 +95,7 @@
 
 .timestamp {
   font-size: 0.75rem;
-  background-color: #d4f5dc;
+  // background-color: #ffffff;
   color: #2b7a2b;
   padding: 0.2rem 0.5rem;
   border-radius: 9999px;
