--- a/src/app/components/chat-room/chat-room.component.scss
+++ b/src/app/components/chat-room/chat-room.component.scss
@@ -57,6 +57,14 @@
       border-top-left-radius: 1rem;
       box-shadow: 0 4px 8px rgba(99, 102, 241, 0.3);
     }
+
+    .timeStamp {
+      font-size: 0.75rem;      /* Smaller text */
+      color: #888888;          /* Light gray color */
+      opacity: 0.8;            /* Slightly faded */
+      margin-top: 4px;         /* Small space from message */
+      display: block;          /* Ensure it's on a new line */
+    }
   }
 
   .chat-form {
