Fixed message delay

--- a/src/app/components/chat-room/chat-room.component.html
+++ b/src/app/components/chat-room/chat-room.component.html
@@ -2,10 +2,14 @@
     
   <h2>{{getReceiverName()}}</h2>
   
-
   <div class="messages" #chatContainer>
-    <div *ngFor="let msg of messages()" class="message" [ngClass]="{ 'own-message': msg.senderId === userId }">
+    <div 
+    *ngFor="let msg of messages()" 
+    class="message" 
+    [ngClass]="{ 'own-message': msg.senderId === userId }">
+
       <!-- <strong>{{ msg.senderName ? msg.senderName : msg.senderEmail }}:</strong> -->
+
       {{ msg.message }}
       <div class="timeStamp">
         {{msg.timestamp?.toDate() | date: getDateFormat(msg.timestamp)}}
@@ -21,6 +25,7 @@
       required
       placeholder="Type your message..."
       class="chat-input"
+      autocomplete="off"  
     />
     <button type="submit" [disabled]="!newMessage.trim()">Send</button>
   </form>
