--- a/src/app/components/chat-list/chat-list.component.scss
+++ b/src/app/components/chat-list/chat-list.component.scss
@@ -41,7 +41,7 @@
   display: block;
   width: 100%;
   padding: 0.5rem 1rem;
-  background-color: #29b429;
+  background-color: #3a47ff;
   color: #ffffff;
   border: none;
   border-radius: 4px;
@@ -50,7 +50,7 @@
 }
 
 .start-chat-btn:hover {
-  background-color: #43912c;
+  background-color: #424bcc;
 }
 
 .chat-list-container {
