UI changes of timestamp and message colors

--- a/src/app/components/chat-list/chat-list.component.scss
+++ b/src/app/components/chat-list/chat-list.component.scss
@@ -41,7 +41,7 @@
   display: block;
   width: 100%;
   padding: 0.5rem 1rem;
-  background-color: #6366F1;
+  background-color: #3e73ff;
   color: #ffffff;
   border: none;
   border-radius: 4px;
@@ -91,7 +91,7 @@
 .chat-name {
   font-weight: 600;
   font-size: 1rem;
-  color: #4a4aef;
+  color: #3e73ff;
 }
 
 .timestamp {
