--- a/src/app/components/new-chat/new-chat.component.html
+++ b/src/app/components/new-chat/new-chat.component.html
@@ -1,6 +1,6 @@
 <!-- This file: new-chat.component.html -->
-
-<div class="new-chat-wrapper">
+<div class="new-chat-container">
+  <div class="new-chat-wrapper">
 
   <!-- Header -->
   <div class="new-chat-header">
@@ -42,3 +42,6 @@
   </div>
 
 </div>
+
+</div>
+
