--- a/src/app/components/chat-room/chat-room.component.scss
+++ b/src/app/components/chat-room/chat-room.component.scss
@@ -103,6 +103,9 @@
       align-self: flex-start;
       background-color: #e5e7eb;
       color: #111827;
+      border-top-right-radius: 1.5rem;
+      border-bottom-right-radius: 1.5rem;
+      
 
       &.single {
         border-radius: 1rem;
