--- a/src/app/components/chat-list/chat-list.component.html
+++ b/src/app/components/chat-list/chat-list.component.html
@@ -4,7 +4,7 @@
 
       <!-- Sticky Header -->
       <div class="chat-header">
-        <h1 class="chat-title">Chats</h1>
+        <h1 class="chat-title" routerLink="'/home'"><button class="chat-title-btn" [routerLink]="'/home'">Chats</button></h1>
         <button (click)="openNewChatPopup()" class="start-chat-btn"> <b>Start New Chat </b> </button>
       </div>
 
